--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html>
 <head>
   <title>Fouzan Sahibole | Data Analyst</title>
+  <meta charset="UTF-8">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <header>
     <h1>Hi, I'm Your Name Fouzan👋</h1>
-    <p>Data Analyst skilled in Excel, SQL, and Power BI. I love turning raw data into actionable insights.</p>
-    <a href="projects.html">View My Projects →</a>
+    <p>Data Analyst skilled in Python, SQL, and Power BI. I love turning data into actionable insights.</p>
+    <nav>
+      <a href="projects.html">Projects</a> |
+      <a href="about.html">About</a>
+    </nav>
   </header>
 </body>
 </html>
