--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1>Hi, I'm Your Name Fouzan👋</h1>
+    <h1>Hi, I'm Fouzan👋</h1>
     <p>Data Analyst skilled in Python, SQL, and Power BI. I love turning data into actionable insights.</p>
     <nav>
       <a href="projects.html">Projects</a> |
