--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,20 @@
-<h2>Projects</h2>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Projects | Your Name</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="assets/css/style.css">
+</head>
+<body>
+  <h1>Projects</h1>
 
-<div class="project">
+  <div class="project">
   <h3>📊 Sales Dashboard</h3>
   <p>Built an interactive Power BI dashboard to track regional performance KPIs.</p>
   <p><b>Tools:</b> Power BI, DAX, Excel</p>
    <a href="https://github.com/codewithfouzan/PowerBI-Ecommerce-Sales-Dashboard.git">View on GitHub</a>
 </div>
+
+  <a href="index.html">← Back to Home</a>
+</body>
+</html>
