--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Fouzan Sahibole | Data Analyst</title>
   <meta charset="UTF-8">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
