--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <h2>Contact</h2>
   <ul>
     <li>📧 Email: codewithfouzan@gmail.com</li>
-    <li>💼 <a href="linkedin.com/in/fouzan-sahibole-b4b055241">LinkedIn</a></li>
+    <li>💼 <a href="https://www.linkedin.com/in/fouzan-sahibole-b4b055241">LinkedIn</a></li>
     <li>🐙 <a href="https://github.com/codewithfouzan">GitHub</a></li>
   </ul>
 
