--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Projects | Your Name</title>
+  <title>Projects | Fouzan Sahibole</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
