--- a/projects.html
+++ b/projects.html
@@ -1,20 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Projects | Fouzan Sahibole</title>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Projects | Fouzan Sahibole</title>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
+  <!-- CSS File -->
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  <h1>Projects</h1>
+  <!-- Header -->
+  <header>
+    <h1>My Data Projects 📊</h1>
+    <p>Explore my hands-on projects that showcase data analysis, visualization, and insights.</p>
+    <nav>
+      <a href="index.html">Home</a> |
+      <a href="about.html">About</a>
+    </nav>
+  </header>
 
-  <div class="project">
-  <h3>📊 Sales Dashboard</h3>
-  <p>Built an interactive Power BI dashboard to track regional performance KPIs.</p>
-  <p><b>Tools:</b> Power BI, DAX, Excel</p>
-   <a href="https://github.com/codewithfouzan/PowerBI-Ecommerce-Sales-Dashboard.git">View on GitHub</a>
-</div>
+  <!-- Projects Section -->
+  <main class="projects-container">
 
-  <a href="index.html">← Back to Home</a>
+    <div class="project-card">
+      <h2>📊 Power BI E-Commerce Sales Dashboard</h2>
+      <p>Built an interactive Power BI dashboard to track sales performance, customer segmentation, and regional KPIs for an e-commerce dataset.</p>
+      <p><b>Tools:</b> Power BI, DAX, Excel</p>
+      <a href="https://github.com/codewithfouzan/PowerBI-Ecommerce-Sales-Dashboard.git" target="_blank" class="btn">View on GitHub</a>
+    </div>
+
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    © 2025 Fouzan Sahibole | Data Analyst
+  </footer>
 </body>
 </html>
