--- a/about.html
+++ b/about.html
@@ -1,22 +1,53 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>About | Fouzan Sahibole</title>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About | Fouzan Sahibole</title>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
+  <!-- CSS -->
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  <h1>About Me</h1>
-  <p>Hi, I’m Fouzan Sahibole— a data analyst passionate about storytelling with data. 
-     I specialize in Excel, SQL, and Power BI to help organizations make data-driven decisions.</p>
+  <!-- Header -->
+  <header>
+    <h1>About Me 👋</h1>
+    <p>Learn more about who I am, what I do, and what drives my passion for data.</p>
+    <nav>
+      <a href="index.html">Home</a> |
+      <a href="projects.html">Projects</a>
+    </nav>
+  </header>
 
-  <h2>Contact</h2>
-  <ul>
-    <li>📧 Email: codewithfouzan@gmail.com</li>
-    <li>💼 <a href="https://www.linkedin.com/in/fouzan-sahibole-b4b055241">LinkedIn</a></li>
-    <li>🐙 <a href="https://github.com/codewithfouzan">GitHub</a></li>
-  </ul>
+  <!-- About Section -->
+  <main>
+    <section class="about-card">
+      <img src="assets/images/yourphoto.jpg" alt="Fouzan Sahibole" class="about-photo">
 
-  <a href="index.html">← Back to Home</a>
+      <div class="about-text">
+        <h2>Hi, I’m Fouzan Sahibole 👋</h2>
+        <p>I’m a data analyst passionate about uncovering insights and telling stories with data.  
+        I specialize in tools like <b>Excel</b>, <b>SQL</b>, and <b>Power BI</b> to help organizations make 
+        informed, data-driven decisions.</p>
+
+        <p>I enjoy exploring datasets, building dashboards, and optimizing workflows to deliver clear business intelligence and impact.</p>
+
+        <h3>Let’s Connect</h3>
+        <ul class="contact-list">
+          <li>📧 <a href="mailto:codewithfouzan@gmail.com">codewithfouzan@gmail.com</a></li>
+          <li>💼 <a href="https://www.linkedin.com/in/fouzan-sahibole-b4b055241" target="_blank">LinkedIn</a></li>
+          <li>🐙 <a href="https://github.com/codewithfouzan" target="_blank">GitHub</a></li>
+        </ul>
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    © 2025 Fouzan Sahibole | Data Analyst
+  </footer>
 </body>
 </html>
