--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
   <!-- About Section -->
   <main>
     <section class="about-card">
-      <img src="assets/images/yourphoto.jpg" alt="Fouzan Sahibole" class="about-photo">
+      <img src="assets/images/yourphoto.jpeg" alt="Fouzan Sahibole" class="about-photo">
 
       <div class="about-text">
         <h2>Hi, I’m Fouzan Sahibole 👋</h2>
