--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <div class="intro-section">
-      <img src="assets/images/yourphoto.jpeg" alt="Your Name" class="profile-pic">
+      <img src="assets/images/yourphoto.jpeg" alt="Fouzan Sahibole" class="about-photo">
 
       <div class="intro-text">
         <h1>Hi, I'm Fouzan👋</h1>
