--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <body>
   <header>
     <div class="intro-section">
-      <img src="assets/images/yourphoto.jpeg" alt="Fouzan Sahibole" class="about-photo">
+      <img src="assets/images/yourphoto.jpeg" alt="Fouzan Sahibole" class="profile-pic">
 
       <div class="intro-text">
-        <h1>Hi, I'm Fouzan👋</h1>
-        <p>Data Analyst skilled in Python, SQL, and Power BI. I transform data into insights that drive smart business decisions.</p>
+        <h1>Hi, I'm <span class="accent">Fouzan</span> 👋</h1>
+<p>I’m a <b>Data Analyst</b> who turns raw data into insights using <b>SQL, Python, and Power BI</b>.</p>
         <nav>
           <a href="projects.html">Projects</a> |
           <a href="about.html">About</a>
